test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/Final-Project-275/Final-Project-275/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      10 | } from "./Components/UserTypeSelectButtons";
      11 | import { User } from "./Interfaces/UserObject";
    > 12 | import { DndProvider } from "react-dnd";
         | ^
      13 | import { HTML5Backend } from "react-dnd-html5-backend";
      14 | import { CenterList } from "./Components/Centerlist";
      15 | import { MEAL_LIST } from "./Interfaces/MealObject";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/App.tsx:12:1)

----------------------------|---------|----------|---------|---------|-------------------
File                        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------------|---------|----------|---------|---------|-------------------
All files                   |       0 |        0 |       0 |       0 |                   
 src                        |       0 |      100 |       0 |       0 |                   
  App.tsx                   |       0 |      100 |       0 |       0 | 26-34             
 src/Components             |       0 |        0 |       0 |       0 |                   
  AddToUserList.tsx         |       0 |      100 |       0 |       0 | 17-24             
  AddUser.tsx               |       0 |        0 |       0 |       0 | 14-57             
  Centerlist.tsx            |       0 |        0 |       0 |       0 | 19-68             
  Draggable.tsx             |       0 |        0 |       0 |       0 | 6-65              
  MealItem.tsx              |       0 |        0 |       0 |       0 | 44-67             
  MealListUI.tsx            |       0 |        0 |       0 |       0 | 11-33             
  NavBar.tsx                |       0 |      100 |       0 |       0 | 7-43              
  SuperUserButton.tsx       |       0 |        0 |       0 |       0 | 6-13              
  UserDropdown.tsx          |       0 |        0 |       0 |       0 | 17-53             
  UserList.tsx              |       0 |        0 |       0 |       0 | 24-67             
  UserSelect.tsx            |       0 |        0 |       0 |       0 | 14-57             
  UserTypeIndicator.tsx     |       0 |        0 |       0 |       0 | 5                 
  UserTypeSelectButtons.tsx |       0 |      100 |       0 |       0 | 13-28             
  grid.tsx                  |       0 |      100 |       0 |       0 | 5                 
 src/Interfaces             |       0 |      100 |     100 |       0 |                   
  MealObject.tsx            |       0 |      100 |     100 |       0 | 37                
  UserObject.tsx            |       0 |        0 |       0 |       0 |                   
  currentUserProps.ts       |       0 |        0 |       0 |       0 |                   
  userListProps.ts          |       0 |        0 |       0 |       0 |                   
  userTypeProps.ts          |       0 |        0 |       0 |       0 |                   
----------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.063 s
Ran all test suites.
